--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,23 +28,19 @@ jobs:
       - name: Check Chrome version
         run: google-chrome --version
 
-      - name: Set up Maven
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'maven'
-
-      - name: Build and run tests
+      - name: Build and run tests with Maven
         run: mvn clean test
+
+      - name: Install Allure CLI
+        run: |
+          npm install -g allure-commandline --save-dev
 
       - name: Generate Allure Report
         run: |
-          npm install -g allure-commandline --save-dev
           allure generate target/allure-results --clean -o target/allure-report
 
-      - name: Upload Allure Report as artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload Allure Report
+        uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: target/allure-report
