--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,6 @@
             <version>2.29.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-maven</artifactId>
-            <version>2.15.2</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -61,11 +54,21 @@
                 <artifactId>allure-maven</artifactId>
                 <version>2.15.2</version>
                 <configuration>
-                    <resultsDirectory>allure-results</resultsDirectory>
+                        <resultsDirectory>allure-results</resultsDirectory>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <allure.results.directory>target/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 
 </project>
