--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-m2
 
       - name: Run Tests
-        run: mvn clean test
+        run: mvn clean test -DsuiteXmlFile=testng.xml
 
       - name: Upload Allure results
         uses: actions/upload-artifact@v4
