--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,40 +2,46 @@ name: Run Tests with Allure
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "main" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
           java-version: '17'
-
-      - name: Set up Chrome
-        uses: browser-actions/setup-chrome@v1
+          distribution: 'temurin'
 
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-m2
+            ${{ runner.os }}-maven-
 
-      - name: Run Tests
-        run: mvn clean test -DsuiteXmlFile=testng.xml
+      - name: Run tests with Maven
+        run: mvn clean test "-DsuiteXmlFile=testng.xml"
 
-      - name: Upload Allure results
+      - name: Install Allure commandline
+        uses: simple-elf/allure-commandline@v2
+        with:
+          version: 2.27.0
+          cache: true
+
+      - name: Generate Allure Report
+        run: allure generate target/allure-results --clean -o target/allure-report
+
+      - name: Upload Allure HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: allure-results
-          path: target/allure-results
+          name: allure-report
+          path: target/allure-report
