--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,7 @@ name: Run Tests with Allure
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches: [ "master" ]  # или замени на нужную тебе ветку
 
 jobs:
   test:
@@ -12,35 +10,37 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
+      - name: Set up Maven
+        uses: s4u/setup-maven-action@v1.10.0
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          maven-version: '3.9.6'
 
-      - name: Run tests with Maven
+      - name: Build and run tests with Maven
         run: mvn clean test "-DsuiteXmlFile=testng.xml"
 
-      - name: Install Allure commandline
-        uses: simple-elf/allure-commandline@v2
-        with:
-          version: 2.27.0
-          cache: true
+      - name: Install Allure
+        run: |
+          sudo apt update
+          sudo apt install -y default-jdk unzip
+          curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/latest/download/allure-2.27.0.zip
+          unzip allure.zip -d allure
+          sudo mv allure/allure-2.27.0 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
+          allure --version
 
       - name: Generate Allure Report
-        run: allure generate target/allure-results --clean -o target/allure-report
+        run: |
+          allure generate target/allure-results --clean -o target/allure-report
 
-      - name: Upload Allure HTML Report
+      - name: Upload Allure Report artifact
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
