--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: Run Tests with Allure
 
 on:
   push:
-    branches: [ "master" ]  # или замени на нужную тебе ветку
+    branches:
+      - master
+  pull_request:
 
 jobs:
   test:
@@ -10,37 +12,41 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Java
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Set up Maven
-        uses: s4u/setup-maven-action@v1.10.0
+      - name: Set up Chrome
+        uses: browser-actions/setup-chrome@v1
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
         with:
-          maven-version: '3.9.6'
+          path: |
+            ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven
 
       - name: Build and run tests with Maven
-        run: mvn clean test "-DsuiteXmlFile=testng.xml"
+        run: mvn clean test "-DsuiteXmlFile=testng.xml" -Dallure.results.directory=target/allure-results
 
-      - name: Install Allure
+      - name: List contents of target/allure-results
+        run: ls -la target/allure-results
+
+      - name: Install Allure CLI
         run: |
-          sudo apt update
-          sudo apt install -y default-jdk unzip
-          curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/latest/download/allure-2.27.0.zip
-          unzip allure.zip -d allure
-          sudo mv allure/allure-2.27.0 /opt/allure
-          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
-          allure --version
+          npm install -g allure-commandline --save-dev
 
       - name: Generate Allure Report
         run: |
           allure generate target/allure-results --clean -o target/allure-report
 
-      - name: Upload Allure Report artifact
+      - name: Upload Allure Report Artifact
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
