--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
-name: Run Tests with Allure
+name: Run Tests with Allure Report
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
+    branches: [ "master" ]
 
 jobs:
   test:
@@ -12,10 +10,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Set up Java
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -23,31 +21,23 @@ jobs:
       - name: Set up Chrome
         uses: browser-actions/setup-chrome@v1
 
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven
-
-      - name: Build and run tests with Maven
-        run: mvn clean test "-DsuiteXmlFile=testng.xml" -Dallure.results.directory=target/allure-results
-
-      - name: List contents of target/allure-results
-        run: ls -la target/allure-results
-
-      - name: Install Allure CLI
+      - name: Install Allure
         run: |
-          npm install -g allure-commandline --save-dev
+          wget https://github.com/allure-framework/allure2/releases/download/2.29.1/allure-2.29.1.tgz
+          tar -xvzf allure-2.29.1.tgz
+          sudo mv allure-2.29.1 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
+          allure --version
+
+      - name: Run tests with Maven
+        run: mvn clean test "-DsuiteXmlFile=testng.xml"
 
       - name: Generate Allure Report
         run: |
-          allure generate target/allure-results --clean -o target/allure-report
+          allure generate target/allure-results -o allure-report --clean
 
-      - name: Upload Allure Report Artifact
+      - name: Upload HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: allure-report
-          path: target/allure-report
+          name: allure-html
+          path: allure-report/
