--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,50 @@
-name: Run Tests with Allure Report
+name: Run Tests and Publish Allure Report
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ main ]
 
 jobs:
-  test:
+  test-and-report:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Java
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Set up Chrome
-        uses: browser-actions/setup-chrome@v1
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
 
-      - name: Install Allure
-        run: |
-          wget https://github.com/allure-framework/allure2/releases/download/2.29.1/allure-2.29.1.tgz
-          tar -xvzf allure-2.29.1.tgz
-          sudo mv allure-2.29.1 /opt/allure
-          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
-          allure --version
-
-      - name: Run tests with Maven
+      - name: Run tests and generate Allure results
         run: mvn clean test "-DsuiteXmlFile=testng.xml"
 
-      - name: Generate Allure Report
+      - name: Generate Allure report
         run: |
-          allure generate target/allure-results -o allure-report --clean
+          mkdir -p allure-report
+          npx allure generate target/allure-results --clean -o allure-report
 
-      - name: Upload HTML Report
-        uses: actions/upload-artifact@v4
+      - name: Upload Allure Report as GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v4
         with:
-          name: allure-html
-          path: allure-report/
+          path: allure-report
+
+  deploy:
+    needs: test-and-report
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
