--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,38 +2,38 @@ name: Run Tests and Publish Allure Report
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   test-and-report:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
           java-version: '17'
+          distribution: 'temurin'
 
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn clean test -DsuiteXmlFile=testng.xml
 
-      - name: Run tests and generate Allure results
-        run: mvn clean test "-DsuiteXmlFile=testng.xml"
-
-      - name: Generate Allure report
+      - name: Generate Allure Report
         run: |
-          mkdir -p allure-report
-          npx allure generate target/allure-results --clean -o allure-report
+          npm install -g allure-commandline --save-dev
+          allure generate target/allure-results --clean -o allure-report
 
-      - name: Upload Allure Report as GitHub Pages artifact
+      - name: Upload HTML report to GitHub Pages
         uses: actions/upload-pages-artifact@v4
         with:
           path: allure-report
@@ -41,10 +41,11 @@ jobs:
   deploy:
     needs: test-and-report
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
