--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           java-version: '17'
@@ -28,13 +28,13 @@ jobs:
       - name: Build with Maven
         run: mvn clean test -DsuiteXmlFile=testng.xml
 
-      - name: Generate Allure Report
+      - name: Install Allure CLI and Generate Report
         run: |
           npm install -g allure-commandline --save-dev
           allure generate target/allure-results --clean -o allure-report
 
-      - name: Upload HTML report to GitHub Pages
-        uses: actions/upload-pages-artifact@v4
+      - name: Upload Allure Report as artifact
+        uses: actions/upload-pages-artifact@v1
         with:
           path: allure-report
 
