--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: Run Tests and Publish Allure Report
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 permissions:
   contents: write
@@ -12,34 +10,34 @@ permissions:
   id-token: write
 
 jobs:
-  test-and-report:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      - name: Build with Maven
+      - name: Run tests with Maven
         run: mvn clean test -DsuiteXmlFile=testng.xml
 
-      - name: Install Allure CLI and Generate Report
+      - name: Install Allure and generate report
         run: |
           npm install -g allure-commandline --save-dev
           allure generate target/allure-results --clean -o allure-report
 
-      - name: Upload Allure Report as artifact
+      - name: Upload HTML report to GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: allure-report
 
   deploy:
-    needs: test-and-report
+    needs: build
     runs-on: ubuntu-latest
     environment:
       name: github-pages
